# Extropic-Hack-Denoise

./: .gitignore  CONTRACT_NOTES.md  README.md  main.py  pyproject.toml
data/will-video/processed/: frame_00001.pgm  frame_00002.pgm  frame_00003.pgm  frame_00004.pgm  frame_00005.pgm  frame_00006.pgm  frame_00007.pgm  frame_00008.pgm  frame_00009.pgm  frame_00010.pgm  frame_00011.pgm  frame_00012.pgm  frame_00013.pgm  frame_00014.pgm  frame_00015.pgm  frame_00016.pgm  frame_00017.pgm  frame_00018.pgm  frame_00019.pgm  frame_00020.pgm  frame_00021.pgm  frame_00022.pgm  frame_00023.pgm  frame_00024.pgm  frame_00025.pgm  frame_00026.pgm  frame_00027.pgm  frame_00028.pgm  frame_00029.pgm  frame_00030.pgm  frame_00031.pgm  frame_00032.pgm  frame_00033.pgm  frame_00034.pgm  frame_00035.pgm  frame_00036.pgm  frame_00037.pgm  frame_00038.pgm  frame_00039.pgm  frame_00040.pgm  (+92 more)
examples/denoise/: README.md  __init__.py  benchmark.py  demo.py  denoise_cameraman.py  denoise_circles.py  denoise_peppers.py  denoise_video.py  denoiser.py  sweep_cameraman.py  sweep_peppers.py  utils.py
planning/: CursorGuide.md  ImplementationSummary.md  QuickStart.md
src/: denoise.py
src-temp/: README.md  cusrors_implementation_summary.md  main.py  pyproject.toml
src-temp/s1_input/: __init__.py  loader.py  noise_gen.py
src-temp/s2a_baseline/: __init__.py  bilateral_filter.py
src-temp/s3_results/: __init__.py  benchmark.py  metrics.py  visualizer.py
src-temp2/: README.md  main_comparison.py  prepare_test_images.py  test_integration.py
src-temp2/denoisers/: __init__.py  ising_denoiser.py
(+1 files in other folders)
